[gd_scene load_steps=6 format=3 uid="uid://dasetg4ekwflh"]

[ext_resource type="Script" uid="uid://efljt3v8iay4" path="res://Menu.gd" id="1_uubjt"]
[ext_resource type="Texture2D" uid="uid://i5t6b357pym" path="res://Icons/Logo.png" id="2_dolsu"]
[ext_resource type="Texture2D" uid="uid://mi22tn4bt7e" path="res://Icons/Normal.png" id="2_ylpcl"]
[ext_resource type="Texture2D" uid="uid://5h573dn6uynq" path="res://Icons/Encore.png" id="3_cx167"]
[ext_resource type="Texture2D" uid="uid://2bdwj2bdiq1i" path="res://Icons/Emeralds.png" id="4_cx167"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uubjt")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -488.0
offset_right = 200.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Sprite2D" type="Sprite2D" parent="VBoxContainer"]
texture_filter = 1
position = Vector2(200, -173)
scale = Vector2(0.723333, 0.723333)
texture = ExtResource("2_dolsu")

[node name="Normal" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 42
text = "Normal"
icon = ExtResource("2_ylpcl")
icon_alignment = 1
expand_icon = true

[node name="Encore" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 42
text = "Encore"
icon = ExtResource("3_cx167")
icon_alignment = 1
expand_icon = true

[node name="ERZ" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 42
text = "Reverie"
icon = ExtResource("4_cx167")
icon_alignment = 1
expand_icon = true

[node name="Sprite2D" type="Sprite2D" parent="."]

[connection signal="pressed" from="VBoxContainer/Normal" to="." method="_on_normal_pressed"]
[connection signal="pressed" from="VBoxContainer/Encore" to="." method="_on_encore_pressed"]
[connection signal="pressed" from="VBoxContainer/ERZ" to="." method="_on_erz_pressed"]
